After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772587 - sharing: Fix crash on exit
sharing: Fix crash on exit
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: sharing
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2016-10-07 18:14 UTC by Bastien Nocera
Modified: 2016-10-10 14:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sharing: Fix crash on exit (1.00 KB, patch)
2016-10-07 18:15 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2016-10-07 18:14:51 UTC
.
Comment 1 Bastien Nocera 2016-10-07 18:15:08 UTC
Created attachment 337193 [details] [review]
sharing: Fix crash on exit

When finalising the sharing manager, we destroyed the services
hashtable, but service_free() passed NULL as the manager, making it
impossible to really stop the service. As _stop() was already called, we
shouldn't need to stop the service, or crash.
Comment 2 Rui Matos 2016-10-10 13:49:49 UTC
Review of attachment 337193 [details] [review]:

right
Comment 3 Bastien Nocera 2016-10-10 14:26:39 UTC
Attachment 337193 [details] pushed as 90cd5a0 - sharing: Fix crash on exit