sharing: Fix crash on exit

When finalising the sharing manager, we destroyed the services
hashtable, but service_free() passed NULL as the manager, making it
impossible to really stop the service. As _stop() was already called, we
shouldn't need to stop the service, or crash.

https://bugzilla.gnome.org/show_bug.cgi?id=772587